--- a/examples/example_1.ipynb
+++ b/examples/example_1.ipynb
@@ -4,11 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
-    "\n",
-    "<a href=\"https://zenodo.org/badge/latestdoi/221973907\"><img style=\"float: left;\" src=\"https://zenodo.org/badge/221973907.svg\"></a><a href=\"https://zenodo.org/badge/latestdoi/221973907\"></a> \n",
+    "<a href=\"https://github.com/niva83/YADDUM\"><img style=\"float: left;\" src=\"https://img.shields.io/github/v/release/niva83/YADDUM\"></a>\n",
+    " <a href=\"https://zenodo.org/badge/latestdoi/221973907\"><img style=\"float: left;\" src=\"https://zenodo.org/badge/221973907.svg\"></a><a href=\"https://zenodo.org/badge/latestdoi/221973907\"></a> \n",
     "<a href=\"https://github.com/niva83/YADDUM/blob/master/LICENSE\"><img style=\"float: left;\" src=\"https://img.shields.io/badge/license-BSD-green\"></a>\n",
-    "<a href=\"https://www.buymeacoffee.com/z57lyJbHo\" rel=\"nofollow\"><img style=\"float: left;\" alt=\"https://img.shields.io/badge/Donate-Buy%20me%20a%20coffee-yellowgreen.svg\" src=\"https://warehouse-camo.cmh1.psfhosted.org/1c939ba1227996b87bb03cf029c14821eab9ad91/68747470733a2f2f696d672e736869656c64732e696f2f62616467652f446f6e6174652d4275792532306d6525323061253230636f666665652d79656c6c6f77677265656e2e737667\"></a>\n",
+    " <a href=\"https://www.buymeacoffee.com/z57lyJbHo\" rel=\"nofollow\"><img style=\"float: left;\" alt=\"https://img.shields.io/badge/Donate-Buy%20me%20a%20coffee-yellowgreen.svg\" src=\"https://warehouse-camo.cmh1.psfhosted.org/1c939ba1227996b87bb03cf029c14821eab9ad91/68747470733a2f2f696d672e736869656c64732e696f2f62616467652f446f6e6174652d4275792532306d6525323061253230636f666665652d79656c6c6f77677265656e2e737667\"></a>\n",
     "\n",
     "\n",
     "# YADDUM: Yet Another Dual-Doppler Uncertainty Model"
