--- a/examples/example_1.ipynb
+++ b/examples/example_1.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 339,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 340,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 341,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 342,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -145,16 +145,16 @@
    "metadata": {},
    "source": [
     "With the code above we have added two lidars  '*koshava*' and '*whittle*' together with their positions and their intrinsic uncertainties which reflect their ability to:\n",
-    "- Estimate radial velocity from the backscatter signal (*u_estimation*)\n",
-    "- Resolve range (i.e., distance) from which the backscatter signal is coming from (*u_range*)\n",
-    "- Point laser beams towards measurement points (*u_azimuth* and *u_elevation*)\n",
+    "- Estimate radial velocity from the backscatter signal (*u_estimation* in m s-1)\n",
+    "- Resolve range (i.e., distance) from which the backscatter signal is coming from (*u_range* in m)\n",
+    "- Point laser beams towards measurement points (*u_azimuth* and *u_elevation* in degrees)\n",
     "\n",
     "Users have access to the lidar information by executing:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 343,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
        "   'u_elevation': 0.1}}}"
       ]
      },
-     "execution_count": 343,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,12 +189,12 @@
    "source": [
     "Next we will add measurement points to our object.\n",
     "We can either add an arbitrary array of points or create 2D horizontal mesh of points. \n",
-    "In this example we will create a 2D mesh with a resolution of 10 m extending 10000 m in Easting and Northing with a center in the barycenter between *koshava* and *sterenn* at 100 m agl:"
+    "In this example we will create a 2D mesh with a resolution of 10 m extending 5000 m in Easting and Northing with a center in the barycenter between *koshava* and *sterenn* at 100 m agl:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 344,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 345,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +243,7 @@
        "        [4.50951845e+05, 6.26658410e+06, 1.00000000e+02]])}"
       ]
      },
-     "execution_count": 345,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 346,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 349,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
        "    uncertainty_model:  Vasiljevic-Courtney_dual-Doppler"
       ]
      },
-     "execution_count": 349,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 347,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 348,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -399,10 +399,13 @@
     "\n",
     "ax.scatter(lidar_uncertainty.instruments['koshava']['position'][0], \n",
     "           lidar_uncertainty.instruments['koshava']['position'][1], \n",
-    "           marker='s', color='red',edgecolors='white', linewidth='2', s=60,zorder=1000, label = \"koshava\")\n",
+    "           marker='s', color='red',edgecolors='white', linewidth='2', \n",
+    "           s=60,zorder=1000, label = \"koshava\")\n",
+    "\n",
     "ax.scatter(lidar_uncertainty.instruments['sterenn']['position'][0], \n",
     "           lidar_uncertainty.instruments['sterenn']['position'][1],\n",
-    "           marker='s', color='black', edgecolors='white', linewidth='2', s=60,zorder=1000, label = \"sterenn\")\n",
+    "           marker='s', color='black', edgecolors='white', linewidth='2', \n",
+    "           s=60,zorder=1000, label = \"sterenn\")\n",
     "ax.set_aspect(1.0)\n",
     "ax.legend(loc='lower right', fontsize=12)\n",
     "plt.show()"
